--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -95,8 +95,8 @@
   </footer>
 
   <!-- Include Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
-  <script src="public/js/signup.js"></script> <!-- Link to signup.js -->
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
+  <script type="module" src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
+  <script type="module" src="public/js/signup.js"></script> <!-- Link to signup.js -->
 </body>
 </html>
