--- a/public/home.html
+++ b/public/home.html
@@ -99,7 +99,8 @@
   <!-- Include Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"></script>
-  
+  <script src="https://www.gstatic.com/firebasejs/11.0.1/firebase-firestore.js"></script> <!-- Add Firestore SDK -->
+
   <!-- Initialize Firebase -->
   <script>
     const firebaseConfig = {
@@ -114,12 +115,22 @@
     
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore(); // Initialize Firestore
 
     // Check if user is logged in
-    firebase.auth().onAuthStateChanged((user) => {
+    firebase.auth().onAuthStateChanged(async (user) => {
       if (user) {
-        // User is signed in, display their email or name
-        document.getElementById('user-name').textContent = user.email || 'User';
+        // User is signed in, retrieve their name from Firestore
+        const docRef = db.collection("users").doc(user.uid);
+        const docSnap = await docRef.get();
+
+        if (docSnap.exists()) {
+            const userData = docSnap.data();
+            document.getElementById('user-name').textContent = userData.name + ' ' + userData.surname; // Display user name and surname
+        } else {
+            console.error("No such document!");
+            document.getElementById('user-name').textContent = 'User'; // Fallback if no name found
+        }
       } else {
         // No user is signed in, redirect to index page or show an error
         alert("No user logged in. Redirecting to login page.");
