--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -57,6 +57,7 @@
 
     #timer {
       font-weight: bold;
+      font-size: 20px; /* Increased font size for visibility */
     }
 
     /* Styles for the button */
@@ -107,11 +108,15 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="public/js/timer.js"></script>
+  <script src="public/js/timer.js" type="module"></script> <!-- Ensure this path is correct -->
   <script>
-    document.getElementById('control-q1').addEventListener('submit', function(e) {
-      e.preventDefault();
-      window.location.href = 'controls_question2.html'; // Go to the next question page
+    document.addEventListener('DOMContentLoaded', function() {
+      // Timer functionality is already being handled in timer.js
+      // Form submission logic
+      document.getElementById('control-q1').addEventListener('submit', function(e) {
+        e.preventDefault();
+        window.location.href = 'controls_question2.html'; // Go to the next question page
+      });
     });
   </script>
 </body>
