--- a/public/controls_question1.html
+++ b/public/controls_question1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control Question 1 - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css"> <!-- Corrected path -->
   <style>
     /* Page styling for consistency */
     body {
@@ -57,7 +57,6 @@
 
     #timer {
       font-weight: bold;
-      font-size: 20px; /* Increased font size for visibility */
     }
 
     /* Styles for the button */
@@ -108,16 +107,13 @@
     <p>&copy; 2024 Drive Mzansi</p>
   </footer>
 
-  <script src="public/js/timer.js" type="module"></script> <!-- Ensure this path is correct -->
+  <script src="js/timer.js" type="module"></script> <!-- Corrected path and added type="module" -->
   <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      // Timer functionality is already being handled in timer.js
-      // Form submission logic
-      document.getElementById('control-q1').addEventListener('submit', function(e) {
-        e.preventDefault();
-        window.location.href = 'controls_question2.html'; // Go to the next question page
-      });
+    document.getElementById('control-q1').addEventListener('submit', function(e) {
+      e.preventDefault();
+      window.location.href = 'controls_question2.html'; // Go to the next question page
     });
   </script>
 </body>
 </html>
+
