--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Drive Mzansi</title>
-  <link rel="stylesheet" href="public/css/styles.css"> <!-- Link to main CSS file -->
+  <link rel="stylesheet" href="css/styles.css"> <!-- Corrected path -->
   <style>
       /* Inline styles to match the other pages */
       body {
@@ -139,7 +139,7 @@
     });
   </script>
 
-  <script src="public/js/home.js" type="module"></script> <!-- Use type="module" -->
+  <script src="js/home.js" type="module"></script> <!-- Corrected path and used type="module" -->
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -161,4 +161,5 @@
   </script>
 </body>
 </html>
+
 
